fixes terms and condition alignment issue for workshops pages. introduces two columns for terms and conditions, same place. Adds a backbone-js-on-rails image for implementation.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -94,7 +94,7 @@ hr {
 
 section.content {
   @include outer-container;
-  max-width: 1100px;
+  max-width: $max-width;
   padding: 3em 2em;
 
   .text-box {
